# wrap-match

./: Cargo.toml  README.md
impl/: Cargo.toml
impl/src/: add_error_info.rs  lib.rs  log_statement.rs  options.rs
src/: lib.rs
tests/: basic.rs
tests/ui/: const-function.rs  const-function.stderr  inner-deprecated.rs  inner-deprecated.stderr  invalid-option-name.rs  invalid-option-name.stderr  invalid-option-type.rs  invalid-option-type.stderr  invalid-return-type.rs  invalid-return-type.stderr  no-debug-display.rs  no-debug-display.stderr  not-a-function.rs  not-a-function.stderr
