[package]
name = "wrap-match"
description = "A procedural macro to wrap a function in match statement to make error logging super easy."
authors = ["naturecodevoid"]
homepage = "https://github.com/naturecodevoid/wrap-match"
repository = "https://github.com/naturecodevoid/wrap-match"
documentation = "https://docs.rs/wrap-match"
version = "1.0.4"
edition = "2021"
license = "MIT"

[dependencies]
wrap-match-impl = { version = "=1.0.4", path = "impl" }

[dev-dependencies]
env_logger = "0.10"
log = "0.4"
pollster = "0.3.0"
trybuild = "1.0"

[workspace]
members = ["impl"]
