[package]
name = "wrap-match-impl"
description = "Procedural macro for the `wrap-match` crate."
authors = ["naturecodevoid"]
homepage = "https://github.com/naturecodevoid/wrap-match"
repository = "https://github.com/naturecodevoid/wrap-match"
documentation = "https://docs.rs/wrap-match"
version = "1.0.4"
edition = "2021"
license = "MIT"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", default-features = false, features = ["full", "parsing", "printing", "fold", "clone-impls", "proc-macro", "extra-traits"] }

[lib]
proc-macro = true
